<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Generic eForm</string>
	<string name="welcome">Welcome!</string>
	<string name="button_edit">Edit</string>
	<string name="button_fill">Fill Out</string>
	<string name="button_help">Help</string>
	<string name="title_activity_edit">Edit</string>
	<string name="button_new_form">New Form</string>
	<string name="label_list_forms">My Forms:</string>
	<string name="title_activity_edit_form">Edit Form</string>
	<string name="button_save">Done</string>
	<string name="message_form_error">Missing fields. Creates them to complete form.</string>
	<string name="button_new_item">New Item</string>
	<string name="title_activity_edit_item">Edit Item</string>
	<string name="label_question">Question:</string>
	<string name="label_position">Position:</string>
	<string name="label_type_select">Choose the question type</string>

	<string-array name="type_options">
		<item>Text</item>
		<item>Single Choice</item>
		<item>Multiple Choice</item>
	</string-array>

	<string name="button_item_ok">OK</string>
	<string name="button_new_option">Add Option</string>
	<string name="message_index_invalid">Index out of bounds. Inserted at the end.</string>
	<string name="dialog_edit">Edit</string>
	<string name="title_activity_fill">Fill</string>
	<string name="menu_fromURL">From URL</string>
	<string name="message_download_error">Error downloading form from URL</string>

</resources>