<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	tools:context=".MainActivity" >

	<TextView
		android:id="@+id/app_name"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="@string/app_name"
		android:textSize="32sp" />

	<TextView
		android:id="@+id/welcome"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_below="@id/app_name"
		android:gravity="center_horizontal"
		android:text="@string/welcome"
		android:textSize="28sp" />

	<Button
		android:id="@+id/button_edit"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/button_fill"
		android:layout_below="@id/welcome"
		android:layout_marginTop="70dp"
		android:text="@string/button_edit" />

	<Button
		android:id="@id/button_fill"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_below="@id/button_edit"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="21dp"
		android:text="@string/button_fill" />

	<Button
		android:id="@+id/button_help"
		android:layout_width="200sp"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/button_fill"
		android:layout_below="@id/button_fill"
		android:layout_marginTop="21dp"
		android:text="@string/button_help" />

</RelativeLayout>